create html template for messages

--- a/live-chat.html
+++ b/live-chat.html
@@ -3,12 +3,19 @@
 </head>
 
 <body>
-  <h1>Welcome to Meteor!</h1>
-
-  {{> hello}}
+{{> messages}}
 </body>
 
-<template name="hello">
-  <button>Click Me</button>
-  <p>You've pressed the button {{counter}} times.</p>
+<template name="messages">
+<ul>
+	{{#each messages}}
+		{{> message}}
+	{{/each}}
+</ul>
+</template>
+
+<template name="message">
+<li>
+	{{message}}
+</li>
 </template>
