create html textarea for the user

--- a/live-chat.html
+++ b/live-chat.html
@@ -12,6 +12,10 @@
 		{{> message}}
 	{{/each}}
 </ul>
+
+<form>
+	<textarea rows="1" cols="50"></textarea>
+</form>
 </template>
 
 <template name="message">
