Structure the  message template with message-header div & message content div in html

--- a/live-chat.html
+++ b/live-chat.html
@@ -22,6 +22,11 @@
 
 <template name="message">
 <li>
+	<div class="message-header">
+		{{user.name}} <span class="time"> {{time}} </span>
+	</div>
+	<div class="message-content">
 	{{message}}
+	</div>
 </li>
 </template>
