add template message helpers to display the username's post

--- a/live-chat.html
+++ b/live-chat.html
@@ -23,7 +23,7 @@
 <template name="message">
 <li>
 	<div class="message-header">
-		{{user.name}} <span class="time"> {{time}} </span>
+		{{user.username}} <span class="time"> {{time}} </span>
 	</div>
 	<div class="message-content">
 	{{message}}
