--- a/live-chat.html
+++ b/live-chat.html
@@ -7,7 +7,7 @@
 </body>
 
 <template name="messages">
-{{> loginButtons}}
+{{> loginButtons align="right"}}
 
 <ul>
 	{{#each messages}}
@@ -22,6 +22,7 @@
 
 <template name="message">
 <li>
+	<img src="{{user.profile}}">
 	<div class="message-header">
 		{{user.username}} <span class="time"> {{time}} </span>
 	</div>
