--- a/live-chat.html
+++ b/live-chat.html
@@ -1,4 +1,5 @@
 <head>
+	<link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
   <title>live-chat</title>
 </head>
 
